// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'CONNECTED' & GamesRetrievable = 'N' > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔗",
            },
            "label": "Connect new account",
            "style": 1,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** *No account connected*",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'CONNECTED' & GamesRetrievable = 'N' > returns expected response when no history 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔗",
            },
            "label": "Connect new account",
            "style": 1,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** *No account connected*",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'CONNECTED' & GamesRetrievable = 'Y' > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔄",
            },
            "label": "Change",
            "style": 2,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_remove",
            "emoji": {
              "name": "🗑️",
            },
            "label": "Remove",
            "style": 4,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** gamertag0000000000001
**How:** Connected Halo account

View profile on: [Halo Data Hive](<https://halodatahive.com/Player/Infinite/gamertag0000000000001>)",
          },
          {
            "name": "**Recent custom games**",
            "value": "",
          },
          {
            "inline": true,
            "name": "Game",
            "value": "Slayer: Streets - Ranked
King of the Hill: Recharge - Ranked
Capture the Flag: Empyrean - Ranked
Strongholds: Live Fire - Ranked
Oddball: Recharge - Ranked",
          },
          {
            "inline": true,
            "name": "Result",
            "value": "Loss - 44:50
Win - 3:2
Win - 3:0
Loss - 175:250
Loss - 1:2 (198:256)",
          },
          {
            "inline": true,
            "name": "When",
            "value": "<t:1732619665:R>
<t:1732619016:R>
<t:1732618052:R>
<t:1732616814:R>
<t:1732615353:R>",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'CONNECTED' & GamesRetrievable = 'Y' > returns expected response when no history 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔄",
            },
            "label": "Try again (Search)",
            "style": 2,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_remove",
            "emoji": {
              "name": "🗑️",
            },
            "label": "Remove",
            "style": 4,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** gamertag0000000000001
**How:** Connected Halo account

View profile on: [Halo Data Hive](<https://halodatahive.com/Player/Infinite/gamertag0000000000001>)",
          },
          {
            "name": "**Recent custom games**",
            "value": "",
          },
          {
            "name": "No custom game matches found",
            "value": "To resolve, either:
- In game:
  1. Open "Settings"
  2. Navigate to "Accessibility" tab
  3. Scroll down to Match History Privacy
  4. Set the "Matchmade Games" option to "Share"
  5. Set the "Non-Matchmade Games" option to "Share"
  6. Close the settings menu
- Go to [**Halo Waypoint Privacy settings 🔗**](https://www.halowaypoint.com/settings/privacy)
  1. Select "Show Matchmade Game History"
  2. Select "Show Non-Matchmade Game History"

Once you have done this, search for your gamertag again.",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'DISPLAY_NAME_SEARCH' & GamesRetrievable = 'N' > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔗",
            },
            "label": "Connect new account",
            "style": 1,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** *No account connected*",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'DISPLAY_NAME_SEARCH' & GamesRetrievable = 'N' > returns expected response when no history 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔗",
            },
            "label": "Connect new account",
            "style": 1,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** *No account connected*",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'DISPLAY_NAME_SEARCH' & GamesRetrievable = 'Y' > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_confirm",
            "emoji": {
              "name": "👍",
            },
            "label": "Yes, this is correct",
            "style": 1,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔄",
            },
            "label": "Change",
            "style": 2,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_remove",
            "emoji": {
              "name": "🗑️",
            },
            "label": "Remove",
            "style": 4,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** gamertag0000000000001
**How:** Matched Discord Display Name to Halo account

View profile on: [Halo Data Hive](<https://halodatahive.com/Player/Infinite/gamertag0000000000001>)",
          },
          {
            "name": "**Recent custom games**",
            "value": "",
          },
          {
            "inline": true,
            "name": "Game",
            "value": "Slayer: Streets - Ranked
King of the Hill: Recharge - Ranked
Capture the Flag: Empyrean - Ranked
Strongholds: Live Fire - Ranked
Oddball: Recharge - Ranked",
          },
          {
            "inline": true,
            "name": "Result",
            "value": "Loss - 44:50
Win - 3:2
Win - 3:0
Loss - 175:250
Loss - 1:2 (198:256)",
          },
          {
            "inline": true,
            "name": "When",
            "value": "<t:1732619665:R>
<t:1732619016:R>
<t:1732618052:R>
<t:1732616814:R>
<t:1732615353:R>",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'DISPLAY_NAME_SEARCH' & GamesRetrievable = 'Y' > returns expected response when no history 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔄",
            },
            "label": "Try again (Search)",
            "style": 2,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_remove",
            "emoji": {
              "name": "🗑️",
            },
            "label": "Remove",
            "style": 4,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** gamertag0000000000001
**How:** Matched Discord Display Name to Halo account

View profile on: [Halo Data Hive](<https://halodatahive.com/Player/Infinite/gamertag0000000000001>)",
          },
          {
            "name": "**Recent custom games**",
            "value": "",
          },
          {
            "name": "No custom game matches found",
            "value": "To resolve, either:
- In game:
  1. Open "Settings"
  2. Navigate to "Accessibility" tab
  3. Scroll down to Match History Privacy
  4. Set the "Matchmade Games" option to "Share"
  5. Set the "Non-Matchmade Games" option to "Share"
  6. Close the settings menu
- Go to [**Halo Waypoint Privacy settings 🔗**](https://www.halowaypoint.com/settings/privacy)
  1. Select "Show Matchmade Game History"
  2. Select "Show Non-Matchmade Game History"

Once you have done this, search for your gamertag again.",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'GAME_SIMILARITY' & GamesRetrievable = 'N' > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔗",
            },
            "label": "Connect new account",
            "style": 1,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** *No account connected*",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'GAME_SIMILARITY' & GamesRetrievable = 'N' > returns expected response when no history 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔗",
            },
            "label": "Connect new account",
            "style": 1,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** *No account connected*",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'GAME_SIMILARITY' & GamesRetrievable = 'Y' > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_confirm",
            "emoji": {
              "name": "👍",
            },
            "label": "Yes, this is correct",
            "style": 1,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔄",
            },
            "label": "Change",
            "style": 2,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_remove",
            "emoji": {
              "name": "🗑️",
            },
            "label": "Remove",
            "style": 4,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** gamertag0000000000001
**How:** Fuzzy matched Discord Username / Display name from a previous series

View profile on: [Halo Data Hive](<https://halodatahive.com/Player/Infinite/gamertag0000000000001>)",
          },
          {
            "name": "**Recent custom games**",
            "value": "",
          },
          {
            "inline": true,
            "name": "Game",
            "value": "Slayer: Streets - Ranked
King of the Hill: Recharge - Ranked
Capture the Flag: Empyrean - Ranked
Strongholds: Live Fire - Ranked
Oddball: Recharge - Ranked",
          },
          {
            "inline": true,
            "name": "Result",
            "value": "Loss - 44:50
Win - 3:2
Win - 3:0
Loss - 175:250
Loss - 1:2 (198:256)",
          },
          {
            "inline": true,
            "name": "When",
            "value": "<t:1732619665:R>
<t:1732619016:R>
<t:1732618052:R>
<t:1732616814:R>
<t:1732615353:R>",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'GAME_SIMILARITY' & GamesRetrievable = 'Y' > returns expected response when no history 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔄",
            },
            "label": "Try again (Search)",
            "style": 2,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_remove",
            "emoji": {
              "name": "🗑️",
            },
            "label": "Remove",
            "style": 4,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** gamertag0000000000001
**How:** Fuzzy matched Discord Username / Display name from a previous series

View profile on: [Halo Data Hive](<https://halodatahive.com/Player/Infinite/gamertag0000000000001>)",
          },
          {
            "name": "**Recent custom games**",
            "value": "",
          },
          {
            "name": "No custom game matches found",
            "value": "To resolve, either:
- In game:
  1. Open "Settings"
  2. Navigate to "Accessibility" tab
  3. Scroll down to Match History Privacy
  4. Set the "Matchmade Games" option to "Share"
  5. Set the "Non-Matchmade Games" option to "Share"
  6. Close the settings menu
- Go to [**Halo Waypoint Privacy settings 🔗**](https://www.halowaypoint.com/settings/privacy)
  1. Select "Show Matchmade Game History"
  2. Select "Show Non-Matchmade Game History"

Once you have done this, search for your gamertag again.",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'MANUAL' & GamesRetrievable = 'N' > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔗",
            },
            "label": "Connect new account",
            "style": 1,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** *No account connected*",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'MANUAL' & GamesRetrievable = 'N' > returns expected response when no history 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔗",
            },
            "label": "Connect new account",
            "style": 1,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** *No account connected*",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'MANUAL' & GamesRetrievable = 'Y' > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔄",
            },
            "label": "Change",
            "style": 2,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_remove",
            "emoji": {
              "name": "🗑️",
            },
            "label": "Remove",
            "style": 4,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** gamertag0000000000001
**How:** Manually claimed Halo account

View profile on: [Halo Data Hive](<https://halodatahive.com/Player/Infinite/gamertag0000000000001>)",
          },
          {
            "name": "**Recent custom games**",
            "value": "",
          },
          {
            "inline": true,
            "name": "Game",
            "value": "Slayer: Streets - Ranked
King of the Hill: Recharge - Ranked
Capture the Flag: Empyrean - Ranked
Strongholds: Live Fire - Ranked
Oddball: Recharge - Ranked",
          },
          {
            "inline": true,
            "name": "Result",
            "value": "Loss - 44:50
Win - 3:2
Win - 3:0
Loss - 175:250
Loss - 1:2 (198:256)",
          },
          {
            "inline": true,
            "name": "When",
            "value": "<t:1732619665:R>
<t:1732619016:R>
<t:1732618052:R>
<t:1732616814:R>
<t:1732615353:R>",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'MANUAL' & GamesRetrievable = 'Y' > returns expected response when no history 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔄",
            },
            "label": "Try again (Search)",
            "style": 2,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_remove",
            "emoji": {
              "name": "🗑️",
            },
            "label": "Remove",
            "style": 4,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** gamertag0000000000001
**How:** Manually claimed Halo account

View profile on: [Halo Data Hive](<https://halodatahive.com/Player/Infinite/gamertag0000000000001>)",
          },
          {
            "name": "**Recent custom games**",
            "value": "",
          },
          {
            "name": "No custom game matches found",
            "value": "To resolve, either:
- In game:
  1. Open "Settings"
  2. Navigate to "Accessibility" tab
  3. Scroll down to Match History Privacy
  4. Set the "Matchmade Games" option to "Share"
  5. Set the "Non-Matchmade Games" option to "Share"
  6. Close the settings menu
- Go to [**Halo Waypoint Privacy settings 🔗**](https://www.halowaypoint.com/settings/privacy)
  1. Select "Show Matchmade Game History"
  2. Select "Show Non-Matchmade Game History"

Once you have done this, search for your gamertag again.",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'UNKNOWN' & GamesRetrievable = '?' > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔗",
            },
            "label": "Connect new account",
            "style": 1,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** *No account connected*",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'UNKNOWN' & GamesRetrievable = '?' > returns expected response when no history 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔗",
            },
            "label": "Connect new account",
            "style": 1,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** *No account connected*",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'USERNAME_SEARCH' & GamesRetrievable = 'N' > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔗",
            },
            "label": "Connect new account",
            "style": 1,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** *No account connected*",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'USERNAME_SEARCH' & GamesRetrievable = 'N' > returns expected response when no history 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔗",
            },
            "label": "Connect new account",
            "style": 1,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** *No account connected*",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'USERNAME_SEARCH' & GamesRetrievable = 'Y' > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_confirm",
            "emoji": {
              "name": "👍",
            },
            "label": "Yes, this is correct",
            "style": 1,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔄",
            },
            "label": "Change",
            "style": 2,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_remove",
            "emoji": {
              "name": "🗑️",
            },
            "label": "Remove",
            "style": 4,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** gamertag0000000000001
**How:** Matched Discord Username to Halo account

View profile on: [Halo Data Hive](<https://halodatahive.com/Player/Infinite/gamertag0000000000001>)",
          },
          {
            "name": "**Recent custom games**",
            "value": "",
          },
          {
            "inline": true,
            "name": "Game",
            "value": "Slayer: Streets - Ranked
King of the Hill: Recharge - Ranked
Capture the Flag: Empyrean - Ranked
Strongholds: Live Fire - Ranked
Oddball: Recharge - Ranked",
          },
          {
            "inline": true,
            "name": "Result",
            "value": "Loss - 44:50
Win - 3:2
Win - 3:0
Loss - 175:250
Loss - 1:2 (198:256)",
          },
          {
            "inline": true,
            "name": "When",
            "value": "<t:1732619665:R>
<t:1732619016:R>
<t:1732618052:R>
<t:1732616814:R>
<t:1732615353:R>",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > AssociationReason = 'USERNAME_SEARCH' & GamesRetrievable = 'Y' > returns expected response when no history 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔄",
            },
            "label": "Try again (Search)",
            "style": 2,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_remove",
            "emoji": {
              "name": "🗑️",
            },
            "label": "Remove",
            "style": 4,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** gamertag0000000000001
**How:** Matched Discord Username to Halo account

View profile on: [Halo Data Hive](<https://halodatahive.com/Player/Infinite/gamertag0000000000001>)",
          },
          {
            "name": "**Recent custom games**",
            "value": "",
          },
          {
            "name": "No custom game matches found",
            "value": "To resolve, either:
- In game:
  1. Open "Settings"
  2. Navigate to "Accessibility" tab
  3. Scroll down to Match History Privacy
  4. Set the "Matchmade Games" option to "Share"
  5. Set the "Non-Matchmade Games" option to "Share"
  6. Close the settings menu
- Go to [**Halo Waypoint Privacy settings 🔗**](https://www.halowaypoint.com/settings/privacy)
  1. Select "Show Matchmade Game History"
  2. Select "Show Non-Matchmade Game History"

Once you have done this, search for your gamertag again.",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): /command > jobToComplete > No Association > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔗",
            },
            "label": "Connect new account",
            "style": 1,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** *No account connected*",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): InteractionButton.Change > returns response but no jobToComplete 1`] = `
{
  "data": {
    "components": [
      {
        "components": [
          {
            "custom_id": "gamertag",
            "label": "Gamertag",
            "max_length": 100,
            "min_length": 1,
            "placeholder": "Enter your Xbox/Halo gamertag",
            "required": true,
            "style": 1,
            "type": 4,
          },
        ],
        "type": 1,
      },
    ],
    "custom_id": "gamertag_search_modal",
    "title": "Gamertag search",
  },
  "type": 9,
}
`;

exports[`ConnectCommand > execute(): InteractionButton.Confirm > jobToComplete > Existing association > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_search_cancel",
            "emoji": {
              "name": "🔙",
            },
            "label": "Back",
            "style": 2,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "embeds": [
      {
        "color": 2664261,
        "description": "Your Discord account has been successfully connected to your Halo account.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** gamertag0000000000001
**How:** Manually claimed Halo account

View profile on: [Halo Data Hive](<https://halodatahive.com/Player/Infinite/gamertag0000000000001>)",
          },
        ],
        "title": "Discord account connected to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): InteractionButton.Initiate > jobToComplete > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔗",
            },
            "label": "Connect new account",
            "style": 1,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** *No account connected*",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): InteractionButton.Remove > jobToComplete > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔗",
            },
            "label": "Connect new account",
            "style": 1,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** *No account connected*",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): InteractionButton.SearchCancel > jobToComplete > Existing association > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_confirm",
            "emoji": {
              "name": "👍",
            },
            "label": "Yes, this is correct",
            "style": 1,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔄",
            },
            "label": "Change",
            "style": 2,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_remove",
            "emoji": {
              "name": "🗑️",
            },
            "label": "Remove",
            "style": 4,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** gamertag0000000000001
**How:** Matched Discord Username to Halo account

View profile on: [Halo Data Hive](<https://halodatahive.com/Player/Infinite/gamertag0000000000001>)",
          },
          {
            "name": "**Recent custom games**",
            "value": "",
          },
          {
            "inline": true,
            "name": "Game",
            "value": "Slayer: Streets - Ranked
King of the Hill: Recharge - Ranked
Capture the Flag: Empyrean - Ranked
Strongholds: Live Fire - Ranked
Oddball: Recharge - Ranked",
          },
          {
            "inline": true,
            "name": "Result",
            "value": "Loss - 44:50
Win - 3:2
Win - 3:0
Loss - 175:250
Loss - 1:2 (198:256)",
          },
          {
            "inline": true,
            "name": "When",
            "value": "<t:1732619665:R>
<t:1732619016:R>
<t:1732618052:R>
<t:1732616814:R>
<t:1732615353:R>",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): InteractionButton.SearchCancel > jobToComplete > No association > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔗",
            },
            "label": "Connect new account",
            "style": 1,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Connecting your Discord account to Halo account, within Guilty Spark, allows Guilty Spark to find your matches and correctly track and report on series you have played.

Click the button below to search for your gamertag and recent game history.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** *No account connected*",
          },
        ],
        "title": "Connect Discord to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): InteractionButton.SearchConfirm > jobToComplete > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_search_cancel",
            "emoji": {
              "name": "🔙",
            },
            "label": "Back",
            "style": 2,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "embeds": [
      {
        "color": 2664261,
        "description": "Your Discord account has been successfully connected to your Halo account.",
        "fields": [
          {
            "name": "What Guilty Spark knows",
            "value": "**Halo account:** gamertag0000000000001
**How:** Manually claimed Halo account

View profile on: [Halo Data Hive](<https://halodatahive.com/Player/Infinite/gamertag0000000000001>)",
          },
        ],
        "title": "Discord account connected to Halo",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): InteractionType.ModalSubmit GamertagSearchModal > jobToComplete > calls updateDeferredReply with the expected opts 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_search_confirm",
            "emoji": {
              "name": "👍",
            },
            "label": "Yes, this is me",
            "style": 3,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔄",
            },
            "label": "No, change search",
            "style": 2,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_search_cancel",
            "emoji": {
              "name": "🔙",
            },
            "label": "Cancel",
            "style": 4,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Please confirm the recent custom game history for yourself below:",
        "fields": [
          {
            "inline": true,
            "name": "Game",
            "value": "Slayer: Streets - Ranked
King of the Hill: Recharge - Ranked
Capture the Flag: Empyrean - Ranked
Strongholds: Live Fire - Ranked
Oddball: Recharge - Ranked",
          },
          {
            "inline": true,
            "name": "Result",
            "value": "Loss - 44:50
Win - 3:2
Win - 3:0
Loss - 175:250
Loss - 1:2 (198:256)",
          },
          {
            "inline": true,
            "name": "When",
            "value": "<t:1732619665:R>
<t:1732619016:R>
<t:1732618052:R>
<t:1732616814:R>
<t:1732615353:R>",
          },
        ],
        "title": "Gamertag search for "gamertag0000000000001"",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): InteractionType.ModalSubmit GamertagSearchModal > jobToComplete > returns expected response when no history 1`] = `
[
  "fake-token",
  {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_change",
            "emoji": {
              "name": "🔄",
            },
            "label": "Try again",
            "style": 2,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_search_cancel",
            "emoji": {
              "name": "🔙",
            },
            "label": "Cancel",
            "style": 4,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 3447003,
        "description": "Please confirm the recent custom game history for yourself below:",
        "fields": [
          {
            "name": "No custom game matches found",
            "value": "To resolve, either:
- In game:
  1. Open "Settings"
  2. Navigate to "Accessibility" tab
  3. Scroll down to Match History Privacy
  4. Set the "Matchmade Games" option to "Share"
  5. Set the "Non-Matchmade Games" option to "Share"
  6. Close the settings menu
- Go to [**Halo Waypoint Privacy settings 🔗**](https://www.halowaypoint.com/settings/privacy)
  1. Select "Show Matchmade Game History"
  2. Select "Show Non-Matchmade Game History"

Once you have done this, search for your gamertag again.",
          },
        ],
        "title": "Gamertag search for "gamertag0000000000001"",
      },
    ],
  },
]
`;

exports[`ConnectCommand > execute(): InteractionType.ModalSubmit GamertagSearchModal > returns response and jobToComplete 1`] = `
{
  "data": {
    "components": [
      {
        "components": [
          {
            "custom_id": "btn_connect_search_confirm",
            "disabled": true,
            "emoji": {
              "name": "👍",
            },
            "label": "Yes, this is me",
            "style": 3,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_change",
            "disabled": true,
            "emoji": {
              "name": "🔄",
            },
            "label": "No, change search",
            "style": 2,
            "type": 2,
          },
          {
            "custom_id": "btn_connect_search_cancel",
            "disabled": true,
            "emoji": {
              "name": "🔙",
            },
            "label": "Cancel",
            "style": 4,
            "type": 2,
          },
        ],
        "type": 1,
      },
    ],
    "content": "",
    "embeds": [
      {
        "color": 5793266,
        "description": "Searching for your gamertag and recent game history...",
        "title": "Gamertag search...",
      },
    ],
  },
  "type": 7,
}
`;
